add categories for linux articles
Signed-off-by: Joel Fernandes <joel@linuxinternals.org>

--- a/_posts/2018-01-08-bpfd-bcc.md
+++ b/_posts/2018-01-08-bpfd-bcc.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: BPFd- Running BCC tools remotely across systems and architectures
+category: linuxinternals
 ---
 This article (with some edits) also [appeared on LWN](https://lwn.net/Articles/744522/).
 
