--- a/_posts/2020-10-25-cpp-ref.md
+++ b/_posts/2020-10-25-cpp-ref.md
@@ -2,7 +2,7 @@
 layout: post
 title: "C++ rvalue references"
 comments: true
-categories: c++
+categories: [c++]
 ---
 The author works in the ChromeOS kernel team, where most of the system
 libraries, low-level components and user space is written in C++. Thus the
