--- a/_posts/2022-11-13-hrtimer.md
+++ b/_posts/2022-11-13-hrtimer.md
@@ -2,7 +2,7 @@
 layout: post
 title: "On workings of hrtimer's slack time functionality"
 comments: true
-categories: timers, linux, kernel
+categories: [timers, linux, kernel]
 ---
 Below are some notes I wrote while studying hrtimer slack behavior (range
 timers), which was added to reduce wakeups and save power, in the commit below.
