Revert test post to simple test message

--- a/_posts/2026-02-08-test-post.md
+++ b/_posts/2026-02-08-test-post.md
@@ -1,12 +1,10 @@
 ---
 layout: post
-title: "New York City"
+title: "Test Post"
 date: 2026-02-08
 categories: personal
 ---
 
-There's something magical about New York City. The energy is unlike anywhere else - millions of people from every corner of the world, all pursuing their dreams in this concrete jungle.
-
-I love walking through Central Park, grabbing a slice of pizza at 2am, and the way the skyline lights up at dusk. The city that never sleeps has a way of making you feel like anything is possible.
+This is a test post to verify the blog is working correctly.
 
 ![New York Skyline](/images/personal/nyc-skyline.jpg)
